wk_taa_taaqa/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FEE_PER_RETURN_AVG_c__c</fullName>
        <inlineHelpText>Average fee per return helps us to understand the complexity of the returns completed.</inlineHelpText>
        <label>Average Fee Per Return</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-$199</fullName>
                </value>
                <value>
                    <fullName>$200 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FYE_Date__c</fullName>
        <label>FYE Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federal_Add_On_Total__c</fullName>
        <label>Federal Add-On Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Firm_Affiliation__c</fullName>
        <inlineHelpText>Represents accounting association made up of independent CPA firms with greater than 70% of its members located in the US.  The Accounting Association(s) are typically located on firms website.</inlineHelpText>
        <label>US Associations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Allinial Global</fullName>
                </value>
                <value>
                    <fullName>BDO Alliance</fullName>
                </value>
                <value>
                    <fullName>CPAConnect</fullName>
                </value>
                <value>
                    <fullName>CPA Connect Alliance</fullName>
                </value>
                <value>
                    <fullName>CPAmerica</fullName>
                </value>
                <value>
                    <fullName>CPA USA Network</fullName>
                </value>
                <value>
                    <fullName>Firm Foundation</fullName>
                </value>
                <value>
                    <fullName>McGladrey Alliance</fullName>
                </value>
                <value>
                    <fullName>Moore Stephens North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Networks__c</fullName>
        <inlineHelpText>Represents consulting organizations in the Accounting/Professional space offering a wide range of services (technology, process, talent, growth, other) to firms. Firm networks are often not represented on firms website.</inlineHelpText>
        <label>Firm Networks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boomer CIO Group 1</fullName>
                </value>
                <value>
                    <fullName>Boomer CIO Group 2</fullName>
                </value>
                <value>
                    <fullName>Boomer Lean Circle</fullName>
                </value>
                <value>
                    <fullName>Boomer Technology Circle</fullName>
                </value>
                <value>
                    <fullName>Boomer Technology Circle 1</fullName>
                </value>
                <value>
                    <fullName>Boomer Technology Circle 2</fullName>
                </value>
                <value>
                    <fullName>Boomer Technology Circle 4</fullName>
                </value>
                <value>
                    <fullName>Boomer Technology Circle 5</fullName>
                </value>
                <value>
                    <fullName>ITA (Information Technology Alliance)</fullName>
                </value>
                <value>
                    <fullName>Nat&apos;l Alliance of Auto Dealer Advisors</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - (CADCA) Auto Dealers</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - (CBAN) Community Banking</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - (HCAA) Health Care</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - (MSA) Manufacturing Services</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - (NPAC) Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - (RECA) Real Estate &amp; Const</fullName>
                </value>
                <value>
                    <fullName>Western Association of Accounting Firms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Assets_Competitor_End_Date__c</fullName>
        <label>Fixed Assets Competitor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Assets_Competitor__c</fullName>
        <label>Fixed Assets Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A Plus FA - Arthur Anderson</fullName>
                </value>
                <value>
                    <fullName>Accountware</fullName>
                </value>
                <value>
                    <fullName>American Fundware</fullName>
                </value>
                <value>
                    <fullName>Arsin Corp</fullName>
                </value>
                <value>
                    <fullName>Asset Keeper</fullName>
                </value>
                <value>
                    <fullName>Asset/Pack - Alpine Data</fullName>
                </value>
                <value>
                    <fullName>Best - FAS</fullName>
                </value>
                <value>
                    <fullName>BNA</fullName>
                </value>
                <value>
                    <fullName>BNA Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Commercial Logic</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Microsystems</fullName>
                </value>
                <value>
                    <fullName>CorpSystem Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Depreciation Works</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets CS</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets Manager - Vertex, Inc.</fullName>
                </value>
                <value>
                    <fullName>Fixed assets Relief</fullName>
                </value>
                <value>
                    <fullName>Franklin Computer Systems</fullName>
                </value>
                <value>
                    <fullName>Hardcat Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Intuit Fixed Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Lawson</fullName>
                </value>
                <value>
                    <fullName>Moneysoft</fullName>
                </value>
                <value>
                    <fullName>Multiview Corp</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Open Systems</fullName>
                </value>
                <value>
                    <fullName>Outsource</fullName>
                </value>
                <value>
                    <fullName>Peachtree</fullName>
                </value>
                <value>
                    <fullName>ProSystem fx Fixed Assets - CCH</fullName>
                </value>
                <value>
                    <fullName>Pro-Ware Asset Keeper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Assets_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GlobalFx_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>GlobalFx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Integrator_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Global Integrator Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <formula>DandbCompany.GlobalUltimateDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Ultimate DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Aspiration__c</fullName>
        <inlineHelpText>Attitude toward growth and investing in the future, as opposed to being content with the way things are today.  (For definition of Low, Medium, High, see Customer Segmentation Guide in Custom Links section below.)</inlineHelpText>
        <label>Growth Aspiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <label>HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_ARM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has ARM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_ATX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has ATX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Accounting_Auditing_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Accounting &amp; Auditing Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Active_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Active Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Axcess_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Axcess_Estate_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Estate/Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Axcess_Fiduciary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Fiduciary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Axcess_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Axcess_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Tax SaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Axcess_Workstream__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Axcess Workstream</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CCH_Expert_Treatises__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CCH Expert Treatises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_COMPL1_Master_Tax_Guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has COMPL1 Master Tax Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_COMPL2_PTE_Single_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has COMPL2: PTE &amp; Single TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_COMPL3_PTE_Core_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has COMPL3: PTE &amp; Core TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPC_MTG_PTP_3_Full_or_5_Lite_Stat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPC: MTG + PTP + 3 Full or 5 Lite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPP_MTG_TRC_50_States_Lite_Forms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPP: MTG+ TRC + 50 StatesLiteForms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPS1_MTG_FED_TRC_50_States_Full__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPS1: MTG+FED+RC+50 States Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CORPS2_MTG_FED_TRC_All_States_Mu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has CORPS2: MTG+FED+RC+All States+Mu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_ClientRelate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has ClientRelate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Compliance_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Compliance Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Database_Lookup_RADAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Database/Lookup/RADAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Document_ASP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Document ASP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Document_On_Premise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Document On Premise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Entity_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Entity Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Federal_Add_Ons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Federal Add Ons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fiduciary__c</fullName>
        <formula>OR(Has_Axcess_Fiduciary__c = true ,Has_PFX_Fiduciary__c  = true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Fiduciary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Financial_and_Estate_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Financial and Estate Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fixed_Assets_Manager_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Fixed Assets Manager OP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fixed_Assets_Manager_SaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Fixed Assets Manager SaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fixed_Assets_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Fixed Assets Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Fixed_Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Fixed Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_GFX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has GFX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_IC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has IC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_IFirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has iFirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_IntelliForms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has IntelliForms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_International_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has International Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Journals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Journals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Knowledge_Coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Knowledge Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Knowledge_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Knowledge Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Knowledge_Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Knowledge Tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Learning_and_Seminars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Learning and Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Load_Utilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Load Utilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Open_Integrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Open Integrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Outsource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Outsource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PDFlyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PDFlyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PFX_Estate_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PFX Estate/Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PFX_Fiduciary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PFX Fiduciary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_POS_Tax_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has POS Tax Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROP1_PTP_Core_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROP1: PTP &amp; Core TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROS4_Standard_FED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROS4: Standard FED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROS6_FED_Federal_TPP_1_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROS6: FED, Federal TPP &amp; 1 State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROT2_TRC_Lite_Core_TPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROT2: TRC Lite &amp; Core TPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROT3_TRC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROT3: TRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PROT5_TRC_Federal_TPP_1_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PROT5: TRC, Federal TPP &amp; 1 State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Portal_SaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Portal SaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Practice_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Practice Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Practice_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Practice Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_R_L_Renewal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has R&amp;L Renewal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Returns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_SFS_Books_2017__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SFS Books 2017</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_SFS_Other_Ancillary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SFS Other Ancillary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_SFS_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SFS Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Sales_Tax_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Sales Tax Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Sales_Tax_Online_CORE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Sales Tax Online/CORE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Scan_SaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Scan SaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Scan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Scan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Schools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Schools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Specialty_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Specialty Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_State_Tax_Reporters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has State Tax Reporters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_State_Tax_Specialty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has State Tax Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_SureTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has SureTax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAA_Tax__c</fullName>
        <formula>Has_ATX__c = true ||
 Has_GFX__c = true ||
 Has_Tax__c = true ||
 Has_Axcess_Tax__c = true ||
 Has_TaxWise__c = true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has TAA Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAX0_TRC_and_FED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TAX0: TRC and FED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAX1_TRC_FED_Federal_TPP_1_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TAX1:TRC,FED,Federal TPP, 1 State  &amp;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TAX2A_TRC_FED_Fed_TPP_1_State_Enti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TAX2A:TRC,FED,Fed TPP,1 State , Enti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_TaxWise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has TaxWise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Tax_Prep_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Tax Prep Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has PFX Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Telecom_DB_Lookup_RADAR_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Telecom DB/Lookup/RADAR Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Trial_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Trial Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Utility_DB_Lokup_RADAR_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Utility DB/Lokup/RADAR Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Workpaper_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Workpaper Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headquarter_Country__c</fullName>
        <label>HQ Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNAL_DNC_DATE__c</fullName>
        <label>INTERNAL DNC DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INTERNAL_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INTERNAL DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPA_200__c</fullName>
        <label>IPA 200</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISC_Account__c</fullName>
        <formula>IF( AND( OR( ISPICKVAL(Market_Segment__c ,&quot;Accounting Firms&quot; ), 
 ISPICKVAL(Market_Segment__c ,&quot;Financial and Estate Planners&quot; )), 
 OR( ISPICKVAL( Market_Sub_Segment__c , &quot;Size TBD&quot;) , 
 ISPICKVAL( Market_Sub_Segment__c , &quot;Sole Proprietor&quot;) , 
	ISPICKVAL( Market_Sub_Segment__c , &quot;2-4 Total Employees&quot;))), TRUE, 
IF( AND( Ispickval(Market_Segment__c ,&quot;Legal Professionals&quot; ), 
 OR( ISPICKVAL( Market_Sub_Segment__c , &quot;Law Firms (Size TBD)&quot;) , 
	ISPICKVAL( Market_Sub_Segment__c , &quot;Law Firm 1-3 Attorneys&quot;))), TRUE,
IF( ISPICKVAL(Market_Segment__c , &quot;Retail Tax Preparers&quot;), TRUE, 
False)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISC Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR_Indirect__c</fullName>
        <label>ISR Indirect</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indirect Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (Indirect Owner)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industries_Supported__c</fullName>
        <label>Industries Supported</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inside_Sales__c</fullName>
        <label>Pro SW ISC DTN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Associations__c</fullName>
        <inlineHelpText>Represents accounting association made up of independent CPA firms with LESS than 70% of its members located in the US. The Accounting Association(s) are typically located on firms website.</inlineHelpText>
        <label>International Associations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abacus Worldwide</fullName>
                </value>
                <value>
                    <fullName>AGN International</fullName>
                </value>
                <value>
                    <fullName>Alliott Group</fullName>
                </value>
                <value>
                    <fullName>Baker Tilly International</fullName>
                </value>
                <value>
                    <fullName>BKR International Alliance</fullName>
                </value>
                <value>
                    <fullName>CPA Associates International</fullName>
                </value>
                <value>
                    <fullName>CPAsNet.com Alliance</fullName>
                </value>
                <value>
                    <fullName>DFK International</fullName>
                </value>
                <value>
                    <fullName>Geneva Group International Alliance</fullName>
                </value>
                <value>
                    <fullName>HLB International</fullName>
                </value>
                <value>
                    <fullName>IAPA</fullName>
                </value>
                <value>
                    <fullName>INAA</fullName>
                </value>
                <value>
                    <fullName>INPACT Americas</fullName>
                </value>
                <value>
                    <fullName>Integra International</fullName>
                </value>
                <value>
                    <fullName>JHI</fullName>
                </value>
                <value>
                    <fullName>Kreston International</fullName>
                </value>
                <value>
                    <fullName>LEA Global/Leading Edge Alliance</fullName>
                </value>
                <value>
                    <fullName>MGI</fullName>
                </value>
                <value>
                    <fullName>Morison KSi</fullName>
                </value>
                <value>
                    <fullName>MSI Global Alliance</fullName>
                </value>
                <value>
                    <fullName>Nexia International</fullName>
                </value>
                <value>
                    <fullName>PKF International</fullName>
                </value>
                <value>
                    <fullName>Praxity</fullName>
                </value>
                <value>
                    <fullName>Premier International Associates</fullName>
                </value>
                <value>
                    <fullName>PrimeGlobal</fullName>
                </value>
                <value>
                    <fullName>Rainmaker - Enterprise Worldwide</fullName>
                </value>
                <value>
                    <fullName>Russell Bedford USA</fullName>
                </value>
                <value>
                    <fullName>TIAG (The International Accounting Group)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Total__c</fullName>
        <label>International Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsMassUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if is updated via mass upload</inlineHelpText>
        <label>IsMassUpdated</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>